--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body{
     margin: 0;
     background: #222;
     background-image: url("https://source.unsplash.com/1600x900/?landscape");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: 'Open Sans', sans-serif;
     font-size: 120%;
 }
